--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -1,11 +1,13 @@
 <mat-card>
   <mat-toolbar color="primary">Detalhes do Curso</mat-toolbar>
 
-
   <mat-card-content>
-    <form [formGroup]="form" >
+    <form [formGroup]="form">
       <mat-form-field class="full-width">
         <input matInput placeholder="Nome" formControlName="name" />
+        @if (form.get.name) {
+        <mat-error>{{ getErrorMessage("name") }}</mat-error>
+        }
       </mat-form-field>
 
       <mat-form-field class="full-width">
@@ -19,7 +21,9 @@
     </form>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="onSubmit()">Salvar</button>
-    <button mat-button  (click)="onCancel()">Cancelar</button>
+    <button mat-raised-button color="primary" (click)="onSubmit()">
+      Salvar
+    </button>
+    <button mat-button (click)="onCancel()">Cancelar</button>
   </mat-card-actions>
 </mat-card>
