--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -18,6 +18,33 @@
           <mat-option value="Back-end">Back-End</mat-option>
         </mat-select>
       </mat-form-field>
+
+      <mat-toolbar>
+        <span>Aulas</span>
+        <button (click)="addNewClass()" mat-icon-button color="primary">
+          <mat-icon>add</mat-icon>
+        </button>
+      </mat-toolbar>
+
+      @for (lesson of getLessonsformArray(); track lesson; let i = $index) {
+      <table style="width: 100%" formArrayName="lessons">
+        <tr [formGroupName]="i">
+          <td style="width: 65%">
+            <mat-form-field class="full-width">
+              <mat-label>Nome da Aula</mat-label>
+              <input matInput formControlName="name" />
+            </mat-form-field>
+          </td>
+          <td style="width: 30%">
+            <mat-form-field class="full-width">
+              <mat-label>URL</mat-label>
+              <span matPrefix>https://youtu.be/</span>
+              <input matInput formControlName="youtubeUrl" />
+            </mat-form-field>
+          </td>
+        </tr>
+      </table>
+      }
     </form>
   </mat-card-content>
   <mat-card-actions>
