--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -42,6 +42,11 @@
               <input matInput formControlName="youtubeUrl" />
             </mat-form-field>
           </td>
+          <td>
+            <button mat-icon-button color="warn" (click)="removeLesson(i)">
+              <mat-icon aria-label="Remover aula">delete</mat-icon>
+            </button>
+          </td>
         </tr>
       </table>
       }
