--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -6,17 +6,19 @@
       <mat-form-field class="full-width">
         <input matInput placeholder="Nome" formControlName="name" />
         @if (form.get.name) {
-        <mat-error>{{ getErrorMessage("name") }}</mat-error>
+        <mat-error>{{ formUtils.getErrorMessage(form, "name") }}</mat-error>
         }
       </mat-form-field>
 
       <mat-form-field class="full-width">
         <mat-label>Categoria</mat-label>
         <mat-select formControlName="category">
-          <mat-option value="null"></mat-option>
           <mat-option value="Front-end">Front-End</mat-option>
           <mat-option value="Back-end">Back-End</mat-option>
         </mat-select>
+        @if (form.get.name) {
+        <mat-error>{{ formUtils.getErrorMessage(form, "category") }}</mat-error>
+        }
       </mat-form-field>
 
       <mat-toolbar>
@@ -25,14 +27,18 @@
           <mat-icon>add</mat-icon>
         </button>
       </mat-toolbar>
-
-      @for (lesson of getLessonsformArray(); track lesson; let i = $index) {
+      @if (formUtils.isFormArrayRequerid(form,'lessons')) {
+      <mat-error>Adicione pelo menos uma aula</mat-error>
+      } @for (lesson of getLessonsformArray(); track lesson; let i = $index) {
       <table style="width: 100%" formArrayName="lessons">
         <tr [formGroupName]="i">
           <td style="width: 65%">
             <mat-form-field class="full-width">
               <mat-label>Nome da Aula</mat-label>
               <input matInput formControlName="name" />
+              @if (getLessonsformArray()[i].get('name')?.invalid) {
+              <mat-error>{{formUtils.getFormArrayFieldErrorMessage(form,'lessons','name',i)}}</mat-error>
+              }
             </mat-form-field>
           </td>
           <td style="width: 30%">
@@ -40,6 +46,9 @@
               <mat-label>URL</mat-label>
               <span matPrefix>https://youtu.be/</span>
               <input matInput formControlName="youtubeUrl" />
+              @if (getLessonsformArray()[i].get('name')?.invalid) {
+                <mat-error>{{formUtils.getFormArrayFieldErrorMessage(form,'lessons','youtubeUrl',i)}}</mat-error>
+                }
             </mat-form-field>
           </td>
           <td>
