--- a/crud-angular/src/app/courses/containers/courses/courses.component.html
+++ b/crud-angular/src/app/courses/containers/courses/courses.component.html
@@ -1,19 +1,30 @@
 <mat-card>
   <mat-toolbar color="primary"> Cursos </mat-toolbar>
-
-  <div class="column-flex mat-elevation-z8">
+  <!-- *ngIf="courses$ | async as courses; else loading" -->
+  <div
+    *ngIf="courses$ | async as courses; else loading"
+    class="column-flex mat-elevation-z8"
+  >
     <app-courses-list
-      *ngIf="courses$ | async as courses; else loading"
-      [courses]="courses"
+      [courses]="courses.courseDTOS"
       (add)="onAdd()"
       (edit)="onEdit($event)"
       (remove)="onRemove($event)"
     ></app-courses-list>
-    <div></div>
-    <ng-template #loading>
-      <div class="loading-spinner">
-        <mat-spinner></mat-spinner>
-      </div>
-    </ng-template>
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 15]"
+      showFirstLastButtons
+      [pageIndex]="pageIndex"
+      [pageSize]="pageSize"
+      [length]="courses.totalElements"
+      (page)="refresh($event)"
+      aria-label="Selecione a pagina de cursos"
+    >
+    </mat-paginator>
   </div>
+  <ng-template #loading>
+    <div class="loading-spinner">
+      <mat-spinner></mat-spinner>
+    </div>
+  </ng-template>
 </mat-card>
